--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 APScheduler==3.11.2
+beautifulsoup4==4.14.3
 blinker==1.9.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
@@ -14,6 +15,7 @@ MarkupSafe==3.0.3
 PyMySQL==1.1.2
 python-dotenv==1.2.1
 requests==2.32.5
+soupsieve==2.8.3
 SQLAlchemy==2.0.45
 typing_extensions==4.15.0
 tzdata==2025.3
